kubernetes/main/apps/flux-system/addons/app/webhooks/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flux-webhook
  annotations:
    external-dns.alpha.kubernetes.io/target: ingress-ext.${domain}
spec:
  ingressClassName: external
  rules:
    - host: flux-webhook.${domain}
      http:
        paths:
          - path: /hook/
            pathType: Prefix
            backend:
              service:
                name: webhook-receiver
                port:
                  number: 80
